@@ -1,6 +1,8 @@
 0.12.24 Dexember xx, 2022
 - use same method as Autocat3 for resering PubInfo
 - in generated header, render each creator on a separate line
+- don't set exclude_encodings param for html5lib parser
+- improve info log message for parser selection
 
 0.12.23 November 29, 2022
 - fix the fix to the whitespace around `<br>` to fix issue with 'None' appearing in EPUBS
